--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
         </div>
 
     </section>
+    <section>
+        <h2>Outras sugestões de vídeos</h2>
+        <div>
+            <a href="https://www.youtube.com/watch?v=iBVMbPaKIwA">
+                <img src="https://img.youtube.com/vi/iBVMbPaKIwA/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=9hfhjYU56jA">
+                <img src="https://img.youtube.com/vi/9hfhjYU56jA/maxresdefault.jpg"/>
+            </a>
+            <a href="https://www.youtube.com/watch?v=qRTT4l8QzY8">
+                <img src="https://img.youtube.com/vi/qRTT4l8QzY8/maxresdefault.jpg"/>
+            </a>
+            
+        </div>
+    </section>
 
 </body>
 
