--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>AULAS SOBRE SHACKESPEARE</header> 
-    <section>
+    <section class="chamada">
         <div>class="chamada-texto">
 
             <h1>Vida e Obra de William Shakespeare - Grandes Personalidades da História</h1>
@@ -24,11 +24,10 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
-
     </section>
-    <section>
+    <section> class="categoria"
         <h2>Outras sugestões de vídeos</h2>
-        <div>
+        <div> class="categoria-videos"
             <a href="https://www.youtube.com/watch?v=iBVMbPaKIwA">
                 <img src="https://img.youtube.com/vi/iBVMbPaKIwA/maxresdefault.jpg"/>
             </a>
