--- a/index.html
+++ b/index.html
@@ -1,46 +1,41 @@
-<html lang="pt -BR">
+<html lang="pt-BR">
 
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Bartle&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+    <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap&quot; rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>SHACKESPEARE</title>
+    <title>PESTE BUBÔNICA</title>
 </head>
 
 <body>
-    <header>AULAS SOBRE SHACKESPEARE</header> 
+    <header>AULAS SOBRE PESTE BUBÔNICA</header>
     <section class="chamada">
-        <div>class="chamada-texto">
-
-            <h1>Vida e Obra de William Shakespeare - Grandes Personalidades da História</h1>
-
-            <p>#história</p>
+        <div class="chamada-texto">
+            <h1>PESTE NEGRA - História, Causas, Sintomas e Tratamento</h1>
+            <p>#História</p>
         </div>
         <div>
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/7H4gBl6Nu4o?si=ZZhMxZpSAl_m2LB4"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/U4I-0OH-Szo?si=Q73uiKySxmVmkAUd&quot;
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-    <section> class="categoria"
+    <section class="categoria">
         <h2>Outras sugestões de vídeos</h2>
-        <div> class="categoria-videos"
-            <a href="https://www.youtube.com/watch?v=iBVMbPaKIwA">
-                <img src="https://img.youtube.com/vi/iBVMbPaKIwA/maxresdefault.jpg"/>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=FWOa43TFzzQ"&gt;
+                <img src="https://img.youtube.com/vi/FWOa43TFzzQ/maxresdefault.jpg"/&gt;
             </a>
-            <a href="https://www.youtube.com/watch?v=9hfhjYU56jA">
-                <img src="https://img.youtube.com/vi/9hfhjYU56jA/maxresdefault.jpg"/>
+            <a href="https://www.youtube.com/watch?v=jW68qr8761Y"&gt;
+                <img src="https://img.youtube.com/vi/jW68qr8761Y/maxresdefault.jpg"/&gt;
             </a>
-            <a href="https://www.youtube.com/watch?v=qRTT4l8QzY8">
-                <img src="https://img.youtube.com/vi/qRTT4l8QzY8/maxresdefault.jpg"/>
+             <a href="https://www.youtube.com/watch?v=cTouipcMAIs"&gt;
+                <img src="https://img.youtube.com/vi/cTouipcMAIs/maxresdefault.jpg"/&gt;
             </a>
-            
         </div>
     </section>
-
 </body>
 
 </html>
