--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap&quot; rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>PESTE BUBÔNICA</title>
+    <title>GRAU DE BIKE</title>
 </head>
 
 <body>
     <header>AULAS SOBRE PESTE BUBÔNICA</header>
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>PESTE NEGRA - História, Causas, Sintomas e Tratamento</h1>
+            <h1>GRAU DE BIKE - Quedas, Famosos, Bicicletas e Adrenalina</h1>
             <p>#História</p>
         </div>
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/U4I-0OH-Szo?si=Q73uiKySxmVmkAUd&quot;
+            <iframe width="560" height="315" src="https://youtu.be/C6zX2zqhBHY?si=ArPwjgzH4temkl8B;
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
