--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header>AULAS SOBRE PESTE BUBÔNICA</header>
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>GRAU DE BIKE - Quedas, Famosos, Bicicletas e Adrenalina</h1>
+            <h1>GRAU DE BIKE - Quedas, Famosos e Bicicletas </h1>
             <p>#História</p>
         </div>
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/C6zX2zqhBHY?si=ArPwjgzH4temkl8B;
+            <iframe width="560" height="315" src="https://youtu.be/iTwhK7fwt4I?si=BGRnZ-w9J-CtqN6R;
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
