--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <section class="chamada">
         <div class="chamada-texto">
             <h1>GRAU DE BIKE - Quedas, Famosos e Bicicletas </h1>
-            <p>#História</p>
+            <p>#grau</p>
         </div>
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/iTwhK7fwt4I?si=BGRnZ-w9J-CtqN6R;
+            <iframe width="560" height="315" src="https://youtu.be/68tN0En-aSQ?si=Dw5enFnzzEn3sbmN;
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
