--- a/index.html
+++ b/index.html
@@ -1,41 +1,42 @@
 <html lang="pt-BR">
 
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
-    <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap&quot; rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poller+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>GRAU DE BIKE</title>
+    <title>TEORIA DO BIGBANG</title>
 </head>
 
 <body>
-    <header>AULAS SOBRE PESTE BUBÔNICA</header>
+    <header> Aulas sobre Teoria do BigBang</header>
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>GRAU DE BIKE - Quedas, Famosos e Bicicletas </h1>
-            <p>#grau</p>
+            <h1>O Big Bang Explicado</h1>
+            <p>#história</p>
         </div>
+
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/68tN0En-aSQ?si=Dw5enFnzzEn3sbmN;
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nNAuuTIf3LE?si=eyec7KV1HpAG9F4h"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-    <section class="categoria">
-        <h2>Outras sugestões de vídeos</h2>
+    <seaction class="categoria">
+        <h2>Outras sugestoes de videos</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=FWOa43TFzzQ"&gt;
-                <img src="https://img.youtube.com/vi/FWOa43TFzzQ/maxresdefault.jpg"/&gt;
+            <a href="https://www.youtube.com/watch?v=yLRhsUu4M60">
+                <img src="https://img.youtube.com/vi/yLRhsUu4M60/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=jW68qr8761Y"&gt;
-                <img src="https://img.youtube.com/vi/jW68qr8761Y/maxresdefault.jpg"/&gt;
+            <a href="https://www.youtube.com/watch?v=gSWFF1dQTIs">
+                <img src="https://img.youtube.com/vi/gSWFF1dQTIs/maxresdefault.jpg" />
             </a>
-             <a href="https://www.youtube.com/watch?v=cTouipcMAIs"&gt;
-                <img src="https://img.youtube.com/vi/cTouipcMAIs/maxresdefault.jpg"/&gt;
+            <a href="https://www.youtube.com/watch?v=Bl8Q7Lt56y0">
+                <img src="https://img.youtube.com/vi/Bl8Q7Lt56y0/maxresdefault.jpg" />
             </a>
         </div>
-    </section>
+        <section>
 </body>
 
 </html>
