--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poller+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>TEORIA DO BIGBANG</title>
+    <title>DINOSSAURO</title>
 </head>
 
 <body>
-    <header> Aulas sobre Teoria do BigBang</header>
+    <header> Aulas sobre Teoria dos Dinossauros</header>
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>O Big Bang Explicado</h1>
+            <h1>O FIM DOS DINOSSAUROS EXPLICADO!</h1>
             <p>#história</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/nNAuuTIf3LE?si=eyec7KV1HpAG9F4h"
+            <iframe width="560" height="315" src="https://youtu.be/0I6ZQOPfgJk?si=DzMAuB3Uubk11lcD"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -26,14 +26,14 @@
     <seaction class="categoria">
         <h2>Outras sugestoes de videos</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=yLRhsUu4M60">
-                <img src="https://img.youtube.com/vi/yLRhsUu4M60/maxresdefault.jpg" />
+            <a href="https://youtu.be/qnJGn9PEdZA?si=fKVL2i7VzoTFzBE4">
+                <img src="https://img.youtube.com/vi/qnJGn9PEdZA/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=gSWFF1dQTIs">
-                <img src="https://img.youtube.com/vi/gSWFF1dQTIs/maxresdefault.jpg" />
+            <a href="https://youtu.be/u148ZVqBBgY?si=W26hDnC8cCetboQK">
+                <img src="https://img.youtube.com/vi/u148ZVqBBgY/maxresdefault.jpg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Bl8Q7Lt56y0">
-                <img src="https://img.youtube.com/vi/Bl8Q7Lt56y0/maxresdefault.jpg" />
+            <a href="https://youtu.be/_JrU4G0UPwM?si=02Pm_0rXE8hayh58">
+                <img src="https://img.youtube.com/vi/_JrU4G0UPwM/maxresdefault.jpg" />
             </a>
         </div>
         <section>
